--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1><<a href="index.html"><img src="images/logo.svg" class="logo" src="" alt="ホーム"></a></h1>
       <nav>
         <ul class="main-nav">
-          <li><a href="news.html">News</a></li>
+          <li><a href="new.html">News</a></li>
           <li><a href="gallery">Gallery</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
