--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Yamashow</title>
   <meta name="description" content="山下翔太の人生ブログ">
 <!-- CSS -->
-  <link rel="stylesheet" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet.css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+  <link rel="stylesheet.css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Philosopher&display=swap" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
